fixing navbar logo on smaller devices

--- a/src/components/pages/NavBar/Navbar.css
+++ b/src/components/pages/NavBar/Navbar.css
@@ -161,134 +161,8 @@
   }
 }
 
-/* @media screen and (max-width: 912px) {
-  .nav-menu {
-    height: 58vh;
+@media screen and (max-width: 500px) {
+  .navbar-logo {
+    transform: translate(10%, 50%);
   }
 }
-@media screen and (max-width: 900px) {
-  .nav-menu {
-    height: 55vh;
-  }
-}
-@media screen and (max-width: 820px) {
-  .nav-menu {
-    height: 55vh;
-  }
-}
-@media screen and (max-width: 768px) {
-  .nav-menu {
-    height: 55vh;
-  }
-}
-
-@media screen and (max-width: 540px) {
-  .nav-menu {
-    height: 55vh;
-  }
-}
-@media screen and (max-width: 414px) {
-  .nav-menu {
-    height: 55vh;
-  }
-}
-@media screen and (max-width: 393px) {
-  .nav-menu {
-    height: 58vh;
-    width: 100%;
-  }
-}
-@media screen and (max-width: 390px) {
-  .nav-menu {
-    height: 60vh;
-    width: 100%;
-  }
-}
-@media screen and (max-width: 375px) {
-  .nav-menu {
-    height: 75vh;
-    width: 100%;
-  }
-  .navbar {
-    width: 100%;
-  }
-} */
-
-/* @media screen and (max-width: 360px) {
-  .nav-links-mobile {
-    font-size: 1.2rem;
-  }
-  .navbar {
-    width: 100%;
-  }
-  .nav-menu {
-    height: 75vh;
-    width: 100%;
-  }
-}
-@media screen and (max-width: 320px) {
-  .nav-menu {
-    height: 85vh;
-    width: 100%;
-  }
-  .navbar {
-    width: 100%;
-  }
-}
-@media screen and (max-width: 280px) {
-  .navbar {
-    width: 100%;
-  }
-
-  .nav-menu {
-    height: 75vh;
-    width: 100%;
-  }
-} */
-
-/* ---------------------------mobile specifics-------------------- */
-/* @media screen and (min-width: 820px) and (max-width: 1180px) {
- 
-  .nav-menu {
-    height: 45vh;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-
-  .nav-menu {
-    height: 50vh;
-  }
-}
-@media screen and (min-width: 912px) and (max-width: 1368px) {
- 
-  .nav-menu {
-    height: 38vh;
-  }
-}
-@media screen and (min-width: 540px) and (max-width: 720px) {
-
-  .nav-menu {
-    height: 66vh;
-  }
-}
-
-@media screen and (min-width: 414px) and (max-width: 736px) {
-
-  .nav-menu {
-    height: 60vh;
-  }
-}
-@media screen and (min-width: 375px) and (max-width: 812px) {
-
-  .nav-menu {
-    height: 65vh;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
- 
-  .nav-menu {
-    height: 50vh;
-  }
-} */
